# maps

./: .gitignore  README.md  install_flask_notes  load_db  package.json  run_servers  used_tutorials
api/: api.py  mapnik.py  test.py
backend/: CMakeLists.txt  DartConfiguration.tcl  DatabaseHelper.cpp  DatabaseHelper.h  GPATH  GRTAGS  GTAGS  a.out  ch_dynamic_config.toml  ch_static_config.toml  config.toml  create_module  dijkstra_config.toml  doxyfile  generate_setup_sources.py  graph_memory.md  green.sql  green2.sql  indices.toml  osm_parser.cpp  osm_parser.h  rendermodule.cpp  rendermodule.h  setup.py  setupRendering.py  test.cpp  test.py  world_style.xml
backend/frank_test/: a.out  mapnik_xml_test.cpp
backend/googletest-download/: CMakeLists.txt
backend/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
backend/include/: library.h
backend/include/database/: csv_convertor.h  database_helper.h  db_edge_iterator.h  db_graph.h
backend/include/database_helper/: DatabaseHelper.h  database_helper.h
backend/include/graph_builder/: bicycle_highway_filter.h  constants.h  edge.h  graph_generator.h  highway_filter.h  link_counter.h  writer.h
backend/include/osm_parser/: bicycle_highway_filter.h  constants.h  edge.h  graph_generator.h  highway_filter.h  link_counter.h  writer.h
backend/include/routing/: adjacency_list_graph.h  adjacency_list_graph_vector.h  algorithm.h  basic_edge_endpoint_handler.h  bidirectional_graph.h  ch_search_graph.h  configuration_parser.h  constants.h  dijkstra.h  edge.h  edge_factory.h  endpoint_handler.h  exception.h  graph.h  graph_factory.h  routing_graph.h  table_name_repository.h  table_names.h  types.h  vertex.h
backend/include/routing/database/: csv_convertor.h  database_helper.h  db_edge_iterator.h  db_graph.h
backend/include/routing/edge_ranges/: iterator_edge_range.h  vector_edge_range.h
backend/include/routing/edges/: basic_edge.h  ch_edge.h  ch_preprocessing_edge.h  ch_search_edge.h  contraction_edge.h  length_source.h  min_edge.h
backend/include/routing/preprocessing/: algorithm_preprocessor.h  bidirectional_dijkstra.h  bidirectional_hop_searcher.h  ch_data_manager.h  ch_dijkstra.h  ch_preprocessor.h  contraction_parameters.h  data_index.h  edge_length_calculation_manager.h  graph_contractor.h  green_index.h  index_extender.h  physical_length_index.h  shortcut_container.h  shortcut_filter.h  shortcut_finder.h  vertex_contractor.h  vertex_measures.h  vertex_ordering.h
backend/include/routing/profile/: data_index.h  edge_length_calculation_manager.h  green_index.h  index_factory.h  inverted_index.h  pair_index_implementation.h  peak_distance_index.h  physical_length_index.h  preference_index.h  profile.h  profile_generator.h  road_type_index.h
backend/include/routing/query/: algorithm_factory.h  bidirectional_dijkstra.h  dijkstra.h  edge_range_policy.h  endpoint_algorithm_policy.h  endpoint_edges_creator.h  endpoints_creator.h  module.h  route.h  route_retriever.h  router.h  routing_mode.h  setup.h
backend/include/routing/utility/: comparison.h  point.h
backend/include/routing/vertices/: basic_vertex.h  ch_search_vertex.h  ch_vertex.h  contraction_search_vertex.h  contraction_vertex.h  edge_range_vertex.h  old_basic_vertex.h
backend/include/tests/: graph_test.h
backend/include/tile_rendering/: rendermodule.h
backend/include/utility/: comparison.h  point.h
backend/inputs/: ch_static_config.toml  ch_static_simple_config.toml  dijkstra_config.toml
backend/src/: test.cpp
backend/src/database/: database_helper.cpp
backend/src/database_helper/: DatabaseHelper.cpp  database_helper.cpp
backend/src/graph_builder/: edge.cpp  link_counter.cpp  main.cpp  writer.cpp
backend/src/osm_parser/: edge.cpp  link_counter.cpp  osm_parser.cpp  writer.cpp
backend/src/routing/: basic_edge_endpoint_handler.cpp  constants.cpp  dijkstra.cpp  edge.cpp  exception.cpp  graph.cpp  route_retriever.cpp  routing_module.cpp  vertex.cpp
backend/src/routing/database/: database_helper.cpp
backend/src/routing/edges/: basic_edge.cpp  ch_preprocessing_edge.cpp  ch_search_edge.cpp  contraction_edge.cpp  min_edge.cpp
backend/src/routing/measurements/: main.cpp
backend/src/routing/preprocessing/: contraction_parameters.cpp  green_index.cpp  physical_length_index.cpp  preprocessing_module.cpp  routing_preprocessor.cpp
backend/src/routing/preprocessor/: main.cpp
backend/src/routing/profile/: green_index.cpp  pair_index_implementation.cpp  peak_distance_index.cpp  physical_length_index.cpp  profile.cpp  road_type_index.cpp
backend/src/routing/query/: module.cpp
backend/src/routing/server/: main.cpp
backend/src/routing/utility/: point.cpp
backend/src/tests/: bidirectional_dijkstra_test.cpp  ch_dijkstra_test.cpp  ch_search_graph_test.cpp  dijkstra_test.cpp  graph_contractor_lazy_update_test.cpp  graph_contractor_test.cpp  graph_test.cpp  query_module_test.cpp  routing_graph_test.cpp  shortcut_filter_test.cpp  shortcut_finder_test.cpp  test_main.cpp  vertex_contraction_measures.cpp  vertex_contraction_measures_test.cpp  vertex_contractor_lazy_update_test.cpp  vertex_contractor_test.cpp
backend/src/tile_rendering/: mapnik_rule_test.cpp  mapnik_xml_test.cpp  rendermodule.cpp
backend/src/utility/: point.cpp
backend/stylesheet_osm_bright/: map_stylesheet.xml  osm-bright.xml  project.mml
backend/stylesheet_osm_bright/layers/land-high/: land_polygons.cpg  land_polygons.dbf  land_polygons.index  land_polygons.prj  land_polygons.shp  land_polygons.shx
backend/stylesheet_osm_bright/layers/land-low/: simplified_land_polygons.cpg  simplified_land_polygons.dbf  simplified_land_polygons.index  simplified_land_polygons.prj  simplified_land_polygons.shp  simplified_land_polygons.shx
backend/stylesheet_osm_bright/layers/ne_places/: ne_10m_populated_places.cpg  ne_10m_populated_places.dbf  ne_10m_populated_places.index  ne_10m_populated_places.prj  ne_10m_populated_places.shp  ne_10m_populated_places.shx
frontend/: package.json
src/: App.css  App.js  index.css  mapSection.css  (+5 more)
(+14 files in other folders)
